# HelloSocket

./: CMakeLists.txt
EasyTCPClient/: CMakeLists.txt
EasyTCPClient/src/: client.cpp
EasyTCPClient/src/network/: EsayTcpClient.cpp  EsayTcpClient.h
EasyTCPSever/: CMakeLists.txt
EasyTCPSever/src/: sever.cpp
EasyTCPSever/src/HighTimer/: CELLTimestamp.hpp
EasyTCPSever/src/network/: EasyTcpSever.cpp  EasyTcpSever.h
common/: CMakeLists.txt
